# rust-httpc

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
examples/: main.rs  test.rs  youdao_fanyi.rs
src/: compress.rs  cookie.rs  lib.rs  main.rs  test.rs  zlib.rs
src/http/: compress.rs  cookie.rs  http.rs  iconv.rs  lib.rs  main.rs  test.rs  zlib.rs
src/httpc/: compress.rs  cookie.rs  lib.rs  zlib.rs
